@@ -9,6 +9,7 @@ Bugfixes:
  - Qt: Fix a crash in the memory viewer
  - Libretro: Fix problems with rumble not turning off
  - GBA BIOS: Fix CpuSet on 0x01XXXXXX addresses
+ - GBA Memory: Fix DMA behavior for SRAM accesses
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
